--- a/project.ipynb
+++ b/project.ipynb
@@ -44,9 +44,9 @@
        "      <th>View5</th>\n",
        "      <th>View6</th>\n",
        "      <th>View7</th>\n",
-       "      <th>View8</th>\n",
+       "      <th>pro</th>\n",
        "      <th>View9</th>\n",
-       "      <th>View10</th>\n",
+       "      <th>con</th>\n",
        "      <th>View11</th>\n",
        "      <th>Rating</th>\n",
        "      <th>Date</th>\n",
@@ -204,14 +204,14 @@
        "3      Durham, NC  Recommend  CEO Approval  Business Outlook  Pros   \n",
        "4     Chicago, IL  Recommend  CEO Approval  Business Outlook  Pros   \n",
        "\n",
-       "                                               View8 View9  \\\n",
+       "                                                 pro View9  \\\n",
        "0  Culture Benefits Employees Leadership Work lif...  Cons   \n",
        "1  Benefits including profit sharing and bonuses ...  Cons   \n",
        "2  The benefits are solid... Or so I'm told hones...  Cons   \n",
        "3  The starting pay is pretty good for a call cen...  Cons   \n",
        "4  I was drawn to the training program for the Fi...  Cons   \n",
        "\n",
-       "                                              View10  View11  Rating Date  \\\n",
+       "                                                 con  View11  Rating Date  \\\n",
        "0            There are no cons, great place to work.     NaN     NaN  NaT   \n",
        "1  In my current role, I am working overtime more...   226.0     NaN  NaT   \n",
        "2  Despite the fact that the average employee of ...     3.0     NaN  NaT   \n",
@@ -1043,16 +1043,100 @@
      ]
     },
     {
-     "ename": "KeyError",
-     "evalue": "'Column not found: pro'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston University/2023-2024/MO221 Project/project.ipynb Cell 15\u001b[0m line \u001b[0;36m2\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/MO221%20Project/project.ipynb#X21sZmlsZQ%3D%3D?line=22'>23</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m Counter(filtered_words)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/MO221%20Project/project.ipynb#X21sZmlsZQ%3D%3D?line=24'>25</a>\u001b[0m \u001b[39m# Group by 'Rating' and calculate most common words for 'pro' and 'con'\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/MO221%20Project/project.ipynb#X21sZmlsZQ%3D%3D?line=25'>26</a>\u001b[0m grouped_pro \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39;49mgroupby(\u001b[39m'\u001b[39;49m\u001b[39mRating\u001b[39;49m\u001b[39m'\u001b[39;49m)[\u001b[39m'\u001b[39;49m\u001b[39mpro\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: \u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(x\u001b[39m.\u001b[39mastype(\u001b[39mstr\u001b[39m)))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/MO221%20Project/project.ipynb#X21sZmlsZQ%3D%3D?line=26'>27</a>\u001b[0m grouped_con \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mgroupby(\u001b[39m'\u001b[39m\u001b[39mRating\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m'\u001b[39m\u001b[39mcon\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: \u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m\u001b[39m.\u001b[39mjoin(x\u001b[39m.\u001b[39mastype(\u001b[39mstr\u001b[39m)))\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/jeet/Library/CloudStorage/OneDrive-Personal/Boston%20University/2023-2024/MO221%20Project/project.ipynb#X21sZmlsZQ%3D%3D?line=28'>29</a>\u001b[0m most_common_words_pro \u001b[39m=\u001b[39m grouped_pro\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: word_frequency(x)\u001b[39m.\u001b[39mmost_common(\u001b[39m5\u001b[39m))\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/groupby/generic.py:1961\u001b[0m, in \u001b[0;36mDataFrameGroupBy.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   1954\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, \u001b[39mtuple\u001b[39m) \u001b[39mand\u001b[39;00m \u001b[39mlen\u001b[39m(key) \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   1955\u001b[0m     \u001b[39m# if len == 1, then it becomes a SeriesGroupBy and this is actually\u001b[39;00m\n\u001b[1;32m   1956\u001b[0m     \u001b[39m# valid syntax, so don't raise\u001b[39;00m\n\u001b[1;32m   1957\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m   1958\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mCannot subset columns with a tuple with more than one element. \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1959\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mUse a list instead.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1960\u001b[0m     )\n\u001b[0;32m-> 1961\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39msuper\u001b[39;49m()\u001b[39m.\u001b[39;49m\u001b[39m__getitem__\u001b[39;49m(key)\n",
-      "File \u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.11/lib/python3.11/site-packages/pandas/core/base.py:244\u001b[0m, in \u001b[0;36mSelectionMixin.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    242\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    243\u001b[0m     \u001b[39mif\u001b[39;00m key \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj:\n\u001b[0;32m--> 244\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mColumn not found: \u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    245\u001b[0m     ndim \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mobj[key]\u001b[39m.\u001b[39mndim\n\u001b[1;32m    246\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_gotitem(key, ndim\u001b[39m=\u001b[39mndim)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Column not found: pro'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most Popular Words in 'pro' for Each Rating:\n",
+      "Rating\n",
+      "1.0    [(benefits, 10), (training, 4), (pay, 4), (cul...\n",
+      "2.0    [(benefits, 16), (pay, 6), (training, 5), (peo...\n",
+      "3.0    [(benefits, 41), (pay, 15), (people, 15), (nic...\n",
+      "4.0    [(benefits, 54), (people, 23), (fidelity, 22),...\n",
+      "5.0    [(benefits, 103), (fidelity, 43), (career, 41)...\n",
+      "Name: pro, dtype: object\n",
+      "\n",
+      "Most Popular Words in 'con' for Each Rating:\n",
+      "Rating\n",
+      "1.0    [(fidelity, 16), (job, 11), (people, 11), (pay...\n",
+      "2.0    [(even, 12), (working, 10), (time, 10), (peopl...\n",
+      "3.0    [(management, 27), (people, 18), (office, 16),...\n",
+      "4.0    [(time, 23), (pay, 19), (role, 18), (office, 1...\n",
+      "5.0    [(pay, 42), (time, 20), (fidelity, 19), (base,...\n",
+      "Name: con, dtype: object\n",
+      "\n",
+      "Most Popular Words in 'pro':\n",
+      "\n",
+      "Rating: 1.0\n",
+      "benefits: 10\n",
+      "training: 4\n",
+      "pay: 4\n",
+      "culture: 4\n",
+      "job: 3\n",
+      "\n",
+      "Rating: 2.0\n",
+      "benefits: 16\n",
+      "pay: 6\n",
+      "training: 5\n",
+      "people: 4\n",
+      "nice: 4\n",
+      "\n",
+      "Rating: 3.0\n",
+      "benefits: 41\n",
+      "pay: 15\n",
+      "people: 15\n",
+      "nice: 10\n",
+      "training: 10\n",
+      "\n",
+      "Rating: 4.0\n",
+      "benefits: 54\n",
+      "people: 23\n",
+      "fidelity: 22\n",
+      "culture: 18\n",
+      "training: 15\n",
+      "\n",
+      "Rating: 5.0\n",
+      "benefits: 103\n",
+      "fidelity: 43\n",
+      "career: 41\n",
+      "people: 38\n",
+      "culture: 36\n",
+      "\n",
+      "Most Popular Words in 'con':\n",
+      "\n",
+      "Rating: 1.0\n",
+      "fidelity: 16\n",
+      "job: 11\n",
+      "people: 11\n",
+      "pay: 10\n",
+      "even: 9\n",
+      "\n",
+      "Rating: 2.0\n",
+      "even: 12\n",
+      "working: 10\n",
+      "time: 10\n",
+      "people: 8\n",
+      "pay: 7\n",
+      "\n",
+      "Rating: 3.0\n",
+      "management: 27\n",
+      "people: 18\n",
+      "office: 16\n",
+      "role: 15\n",
+      "pay: 14\n",
+      "\n",
+      "Rating: 4.0\n",
+      "time: 23\n",
+      "pay: 19\n",
+      "role: 18\n",
+      "office: 17\n",
+      "much: 16\n",
+      "\n",
+      "Rating: 5.0\n",
+      "pay: 42\n",
+      "time: 20\n",
+      "fidelity: 19\n",
+      "base: 19\n",
+      "role: 18\n"
      ]
     }
    ],
@@ -1110,9 +1194,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Helpfulness for Each Rating:\n",
+      "Rating\n",
+      "1.0     5.733333\n",
+      "2.0     3.185185\n",
+      "3.0     3.126984\n",
+      "4.0     1.941176\n",
+      "5.0    12.205128\n",
+      "Name: helpfulness, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -1130,9 +1229,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average Rating for Each Status:\n",
+      "Status\n",
+      "Current Employee                        4.100000\n",
+      "Current Employee, less than 1 year      4.200000\n",
+      "Current Employee, more than 1 year      4.091954\n",
+      "Current Employee, more than 10 years    4.000000\n",
+      "Current Employee, more than 3 years     4.411765\n",
+      "Current Employee, more than 5 years     3.833333\n",
+      "Current Employee, more than 8 years     3.900000\n",
+      "Former Employee                         3.583333\n",
+      "Former Employee, less than 1 year       3.740741\n",
+      "Former Employee, more than 1 year       3.282051\n",
+      "Former Employee, more than 10 years     3.142857\n",
+      "Former Employee, more than 3 years      3.722222\n",
+      "Former Employee, more than 5 years      4.000000\n",
+      "Former Employee, more than 8 years      3.833333\n",
+      "Name: Rating, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -1150,9 +1273,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Most common words in 'con' for ratings 3 or below (excluding certain words):\n",
+      "work: 57\n",
+      "management: 40\n",
+      "company: 32\n",
+      "pay: 31\n",
+      "office: 28\n",
+      "role: 25\n",
+      "training: 24\n",
+      "time: 24\n",
+      "job: 23\n",
+      "call: 22\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to /Users/jeet/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to /Users/jeet/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "/var/folders/f6/tr_gxbkd2510_wbt4rl50ndh0000gn/T/ipykernel_41295/577463723.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  filtered_df['con'] = filtered_df['con'].astype(str)\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from collections import Counter\n",
