improvements to common phrase algorithm for accuracy

--- a/project.ipynb
+++ b/project.ipynb
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -968,97 +968,147 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Most Popular Words in 'pro' for Each Rating:\n",
+      "Most Popular Phrases in 'pro' for Each Rating:\n",
       "Rating\n",
-      "1.0    [(benefits, 147), (pay, 57), (fidelity, 46), (...\n",
-      "2.0    [(benefits, 284), (people, 95), (pay, 84), (de...\n",
-      "3.0    [(benefits, 622), (people, 233), (pay, 190), (...\n",
-      "4.0    [(benefits, 934), (people, 330), (fidelity, 26...\n",
-      "5.0    [(benefits, 804), (people, 306), (fidelity, 30...\n",
+      "1.0    [(benefits good, 41), (benefits great, 31), (p...\n",
+      "2.0    [(benefits good, 95), (benefits great, 75), (p...\n",
+      "3.0    [(benefits great, 220), (benefits good, 169), ...\n",
+      "4.0    [(benefits great, 410), (benefits good, 173), ...\n",
+      "5.0    [(benefits great, 308), (culture great, 109), ...\n",
       "Name: pro, dtype: object\n",
       "\n",
-      "Most Popular Words in 'con' for Each Rating:\n",
+      "Most Popular Phrases in 'con' for Each Rating:\n",
       "Rating\n",
-      "1.0    [(management, 190), (job, 172), (people, 171),...\n",
-      "2.0    [(management, 200), (people, 168), (job, 158),...\n",
-      "3.0    [(management, 308), (people, 238), (pay, 210),...\n",
-      "4.0    [(management, 261), (pay, 255), (people, 223),...\n",
-      "5.0    [(pay, 162), (time, 158), (fidelity, 122), (ma...\n",
+      "1.0    [(management upper, 20), (low pay, 18), (cente...\n",
+      "2.0    [(management senior, 20), (customer service, 1...\n",
+      "3.0    [(management upper, 38), (low pay, 32), (balan...\n",
+      "4.0    [(management upper, 36), (low pay, 32), (busin...\n",
+      "5.0    [(base pay, 35), (entry level, 16), (hours lon...\n",
       "Name: con, dtype: object\n",
       "\n",
-      "Most Popular Words in 'pro':\n",
+      "Most Popular Phrases in 'pro':\n",
       "\n",
       "Rating: 1.0\n",
-      "benefits: 147\n",
-      "pay: 57\n",
-      "fidelity: 46\n",
-      "people: 39\n",
-      "match: 30\n",
+      "benefits good: 41\n",
+      "benefits great: 31\n",
+      "profit sharing: 21\n",
+      "benefits pay: 11\n",
+      "decent pay: 11\n",
+      "good pay: 10\n",
+      "benefits decent: 9\n",
+      "benefits health: 8\n",
+      "beautiful campus: 8\n",
+      "coffee free: 8\n",
       "\n",
       "Rating: 2.0\n",
-      "benefits: 284\n",
-      "people: 95\n",
-      "pay: 84\n",
-      "decent: 54\n",
-      "match: 54\n",
+      "benefits good: 95\n",
+      "benefits great: 75\n",
+      "profit sharing: 42\n",
+      "benefits decent: 27\n",
+      "benefits pay: 20\n",
+      "great people: 20\n",
+      "good people: 18\n",
+      "decent pay: 17\n",
+      "match profit sharing: 17\n",
+      "benefits excellent: 16\n",
       "\n",
       "Rating: 3.0\n",
-      "benefits: 622\n",
-      "people: 233\n",
-      "pay: 190\n",
-      "fidelity: 139\n",
-      "training: 136\n",
+      "benefits great: 220\n",
+      "benefits good: 169\n",
+      "profit sharing: 87\n",
+      "great people: 62\n",
+      "good people: 50\n",
+      "good pay: 45\n",
+      "balance life: 42\n",
+      "benefits pay: 40\n",
+      "great training: 38\n",
+      "match profit sharing: 37\n",
       "\n",
       "Rating: 4.0\n",
-      "benefits: 934\n",
-      "people: 330\n",
-      "fidelity: 261\n",
-      "pay: 222\n",
-      "opportunities: 211\n",
+      "benefits great: 410\n",
+      "benefits good: 173\n",
+      "profit sharing: 154\n",
+      "great people: 104\n",
+      "balance life: 82\n",
+      "culture great: 69\n",
+      "benefits excellent: 67\n",
+      "good pay: 59\n",
+      "match profit sharing: 56\n",
+      "benefits pay: 50\n",
       "\n",
       "Rating: 5.0\n",
-      "benefits: 804\n",
-      "people: 306\n",
-      "fidelity: 304\n",
-      "culture: 288\n",
-      "employees: 248\n",
+      "benefits great: 308\n",
+      "culture great: 109\n",
+      "profit sharing: 101\n",
+      "benefits good: 95\n",
+      "great people: 90\n",
+      "balance life: 82\n",
+      "environment great: 65\n",
+      "great pay: 58\n",
+      "good pay: 57\n",
+      "amazing benefits: 55\n",
       "\n",
-      "Most Popular Words in 'con':\n",
+      "Most Popular Phrases in 'con':\n",
       "\n",
       "Rating: 1.0\n",
-      "management: 190\n",
-      "job: 172\n",
-      "people: 171\n",
-      "fidelity: 169\n",
-      "pay: 116\n",
+      "management upper: 20\n",
+      "low pay: 18\n",
+      "center job: 16\n",
+      "many people: 13\n",
+      "management senior: 13\n",
+      "make sure: 10\n",
+      "customer service: 9\n",
+      "management middle: 8\n",
+      "environment toxic: 7\n",
+      "hires new: 7\n",
       "\n",
       "Rating: 2.0\n",
-      "management: 200\n",
-      "people: 168\n",
-      "job: 158\n",
-      "fidelity: 136\n",
-      "employees: 124\n",
+      "management senior: 20\n",
+      "customer service: 19\n",
+      "management upper: 14\n",
+      "advancement career: 11\n",
+      "low pay: 11\n",
+      "management middle: 11\n",
+      "center job: 11\n",
+      "career growth: 10\n",
+      "long term: 8\n",
+      "high school: 8\n",
       "\n",
       "Rating: 3.0\n",
-      "management: 308\n",
-      "people: 238\n",
-      "pay: 210\n",
-      "job: 183\n",
-      "fidelity: 176\n",
+      "management upper: 38\n",
+      "low pay: 32\n",
+      "balance life: 25\n",
+      "business units: 23\n",
+      "customer service: 20\n",
+      "management middle: 19\n",
+      "high turnover: 18\n",
+      "management senior: 18\n",
+      "center environment: 14\n",
+      "base pay: 13\n",
       "\n",
       "Rating: 4.0\n",
-      "management: 261\n",
-      "pay: 255\n",
-      "people: 223\n",
-      "job: 207\n",
-      "time: 189\n",
+      "management upper: 36\n",
+      "low pay: 32\n",
+      "business units: 29\n",
+      "balance life: 26\n",
+      "management senior: 26\n",
+      "difficult move: 25\n",
+      "base pay: 24\n",
+      "management middle: 24\n",
+      "customer service: 22\n",
+      "business unit: 21\n",
       "\n",
       "Rating: 5.0\n",
-      "pay: 162\n",
-      "time: 158\n",
-      "fidelity: 122\n",
-      "many: 112\n",
-      "management: 112\n"
+      "base pay: 35\n",
+      "entry level: 16\n",
+      "hours long: 16\n",
+      "lower pay: 13\n",
+      "base salary: 13\n",
+      "long time: 13\n",
+      "little pay: 12\n",
+      "hard move: 12\n",
+      "red tape: 12\n",
+      "balance life: 11\n"
      ]
     }
    ],
@@ -1067,51 +1117,54 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
+    "from nltk.util import bigrams, trigrams\n",
     "from collections import Counter\n",
     "\n",
-    "  \n",
     "nltk.download('punkt')\n",
     "nltk.download('stopwords')\n",
     "\n",
-    "   \n",
-    "# Function to calculate word frequency, excluding custom and standard stopwords\n",
-    "def word_frequency(text):\n",
+    "# Function to calculate word frequency for bigrams and trigrams, excluding custom words\n",
+    "def word_frequency_phrases(text):\n",
     "    custom_stop_words = {\n",
-    "        'company', 'work', 'place', 'poor', 'good', 'excellent', 'great',\n",
-    "        'fantastic', 'superb', 'average', 'mediocre', 'best', 'worst',\n",
-    "        'better', 'bad', 'terrible', 'awful', 'amazing', 'horrible',\n",
-    "        'like', 'dislike', 'get', 'cons', 'call', 'calls'\n",
+    "        'company', 'work', 'place', 'get', 'cons', 'call', 'calls', 'fidelity', 'think', 'could', 'feel', 'like', 'even', 'though', 'phone', 'phones','call','calls', 'every', 'day'\n",
     "    }\n",
     "    stop_words = set(stopwords.words('english')).union(custom_stop_words)\n",
     "    words = word_tokenize(text.lower())\n",
-    "    filtered_words = [word for word in words if word.isalpha() and word not in stop_words]\n",
-    "    return Counter(filtered_words)\n",
+    "    words = [word for word in words if word.isalpha() and word not in stop_words]\n",
+    "    \n",
+    "    # Generate bigrams and trigrams\n",
+    "    bigrm = list(bigrams(words))\n",
+    "    trigrm = list(trigrams(words))\n",
+    "    \n",
+    "    # Combine bigrams and trigrams, and sort words within phrases to avoid duplicates like \"great benefits\" and \"benefits great\"\n",
+    "    phrases = [' '.join(sorted(bg)) for bg in bigrm] + [' '.join(sorted(tg)) for tg in trigrm]\n",
+    "    return Counter(phrases)\n",
     "\n",
-    "# Group by 'Rating' and calculate most common words for 'pro' and 'con'\n",
+    "# Group by 'Rating' and calculate most common phrases for 'pro' and 'con'\n",
     "grouped_pro = df.groupby('Rating')['pro'].apply(lambda x: ' '.join(x.astype(str)))\n",
     "grouped_con = df.groupby('Rating')['con'].apply(lambda x: ' '.join(x.astype(str)))\n",
     "\n",
-    "most_common_words_pro = grouped_pro.apply(lambda x: word_frequency(x).most_common(5))\n",
-    "most_common_words_con = grouped_con.apply(lambda x: word_frequency(x).most_common(5))\n",
+    "most_common_phrases_pro = grouped_pro.apply(lambda x: word_frequency_phrases(x).most_common(10))\n",
+    "most_common_phrases_con = grouped_con.apply(lambda x: word_frequency_phrases(x).most_common(10))\n",
     "\n",
     "# Display the result in a table\n",
-    "print(\"Most Popular Words in 'pro' for Each Rating:\")\n",
-    "print(most_common_words_pro)\n",
-    "print(\"\\nMost Popular Words in 'con' for Each Rating:\")\n",
-    "print(most_common_words_con)\n",
+    "print(\"Most Popular Phrases in 'pro' for Each Rating:\")\n",
+    "print(most_common_phrases_pro)\n",
+    "print(\"\\nMost Popular Phrases in 'con' for Each Rating:\")\n",
+    "print(most_common_phrases_con)\n",
     "\n",
     "# For a printed format\n",
-    "print(\"\\nMost Popular Words in 'pro':\")\n",
-    "for rating, words in most_common_words_pro.items():\n",
+    "print(\"\\nMost Popular Phrases in 'pro':\")\n",
+    "for rating, phrases in most_common_phrases_pro.items():\n",
     "    print(f\"\\nRating: {rating}\")\n",
-    "    for word, freq in words:\n",
-    "        print(f\"{word}: {freq}\")\n",
+    "    for phrase, freq in phrases:\n",
+    "        print(f\"{phrase}: {freq}\")\n",
     "\n",
-    "print(\"\\nMost Popular Words in 'con':\")\n",
-    "for rating, words in most_common_words_con.items():\n",
+    "print(\"\\nMost Popular Phrases in 'con':\")\n",
+    "for rating, phrases in most_common_phrases_con.items():\n",
     "    print(f\"\\nRating: {rating}\")\n",
-    "    for word, freq in words:\n",
-    "        print(f\"{word}: {freq}\")\n"
+    "    for phrase, freq in phrases:\n",
+    "        print(f\"{phrase}: {freq}\")\n"
    ]
   },
   {
